--- a/.env
+++ b/.env
@@ -51,7 +51,7 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 SCOUT_DRIVER=meilisearch
 MEILISEARCH_HOST=http://meilisearch:7700
 
-FILESYSTEM_DRIVER=sftp
+FILESYSTEM_DRIVER=local
 
 SFTP_HOST=sftp
 SFTP_PORT=22
