--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME="Oferta Docente"
-APP_ENV=dev
+APP_ENV=local
 APP_KEY=base64:AESShwp2ycODNGpgb/gclrUE1iNwD+Y3PHlEbb7J9eM=
 APP_DEBUG=true
 APP_URL=http://my-test-app.test
