add .env a ignore

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME="Oferta Docente"
 APP_ENV=local
-APP_KEY=base64:AESShwp2ycODNGpgb/gclrUE1iNwD+Y3PHlEbb7J9eM=
+APP_KEY=base64:JsVYfOsObtozWRt8UvRS55YPKLMF+9FGJAToIiXCr/k=
 APP_DEBUG=true
 APP_URL=http://my-test-app.test
 
@@ -51,7 +51,7 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 SCOUT_DRIVER=meilisearch
 MEILISEARCH_HOST=http://meilisearch:7700
 
-FILESYSTEM_DRIVER=local
+FILESYSTEM_DRIVER=sftp
 
 SFTP_HOST=sftp
 SFTP_PORT=22
