--- a/.env
+++ b/.env
@@ -8,11 +8,11 @@ LOG_CHANNEL=single
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=grp6m5lz95d9exiz.cbetxkdyhwsb.us-east-1.rds.amazonaws.com
+DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=m0aloy3yjt4nel0q
-DB_USERNAME=v4u09xu9svqn76tz
-DB_PASSWORD=oyicn72gyr7hkhj2
+DB_DATABASE=my_test_app
+DB_USERNAME=root
+DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
