--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
+        "league/flysystem-aws-s3-v3": "~1",
         "league/flysystem-sftp": "^1.0",
         "phpoffice/phpspreadsheet": "^1.17",
         "snapappointments/bootstrap-select": "^1.13"
