--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME="Oferta Docente"
 APP_ENV=local
 APP_KEY=base64:JsVYfOsObtozWRt8UvRS55YPKLMF+9FGJAToIiXCr/k=
 APP_DEBUG=true
-APP_URL=http://my-test-app.test
+APP_URL=http://od-tfg.local
 
 LOG_CHANNEL=single
 LOG_LEVEL=debug
@@ -22,36 +22,12 @@ SESSION_LIFETIME=120
 
 MEMCACHED_HOST=memcached
 
-REDIS_HOST=redis
-REDIS_PASSWORD=null
-REDIS_PORT=6379
+AWS_ACCESS_KEY_ID=AKIA6P42UOLDYX6PW7VQ
+AWS_SECRET_ACCESS_KEY=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
+AWS_DEFAULT_REGION=eu-west-3
+AWS_BUCKET=od-tfg
 
-MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
-
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
-
-MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-
-SCOUT_DRIVER=meilisearch
-MEILISEARCH_HOST=http://meilisearch:7700
-
-FILESYSTEM_DRIVER=sftp
+FILESYSTEM_DRIVER=s3
 
 SFTP_HOST=sftp
 SFTP_PORT=22
